# transform3d

./: Cargo.toml  README.md  build.rs
examples/: main.rs
src/: lib.rs
src/camera/: mod.rs  render_camera.rs
src/core/: bindable.rs  camera.rs  component.rs  geometry.rs  group.rs  hitbox.rs  light.rs  material.rs  mesh.rs  mod.rs  render_pass_wrapper.rs  scene.rs  state.rs  transformation.rs
src/geometry/: base_geometry.rs  base_geometry.vert  base_geometry.vert.spv  mod.rs
src/light/: mod.rs  point_light.rs
src/material/: mod.rs  solid_color_material.frag  solid_color_material.frag.spv  solid_color_material.rs
